--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-mev-example
-================
+# mev-example
+
 this dir is for trevor messing around with mev stuff
 
-Environment Variables
-=====================
+# Environment Variables
+
 - **ETHEREUM_RPC_URL** - Ethereum RPC endpoint. Can not be the same as FLASHBOTS_RPC_URL
 - **PRIVATE_KEY1** - Private key for the Ethereum EOA that will be submitting Flashbots Ethereum transactions
 - **PRIVATE_KEY2** - Private key for the address getting mev'd
@@ -11,6 +11,6 @@ Environment Variables
 - **HEALTHCHECK_URL** _[Optional]_ - Health check URL, hit only after successfully submitting a bundle.
 - **MINER_REWARD_PERCENTAGE** _[Optional, default 80]_ - 0 -> 100, what percentage of overall profitability to send to miner.
 
-Scripts
-=====================
+# Scripts
+
 - `yarn gen_keys` - generates keys for usage
